--- a/LSU-Data.ipynb
+++ b/LSU-Data.ipynb
@@ -1684,6 +1684,14 @@
    "source": [
     "df.info()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d84e841",
+   "metadata": {},
+   "source": [
+    "## **Detecting and handling outliers**"
+   ]
   }
  ],
  "metadata": {
